# Labs

1/: CMakeLists.txt  main.cpp
1/liblab/: liblab.cpp  liblab.h
2/liblab/: liblab.cpp  liblab.h
